boulder/boulder/tests/compile_fail/hir/missing_semi.bo
# expected `Empty`
# found `u32`
# (6:

fn semi(a: u32) -> u32 {
    a + 3
    a
}